Fix : Handling env secrets

--- a/.env-template
+++ b/.env-template
@@ -1,10 +1,14 @@
-HF_TOKEN=<TOKEN>
+# Hugging Face: create token at https://huggingface.co/settings/tokens
+# - For public datasets (e.g. MahmoudIbrahim/60k-SADA22_Saudi) you can leave HF_TOKEN empty or omit it.
+# - For gated/private datasets or uploading models, set HF_TOKEN to your token (starts with hf_).
+# - Never commit .env; it is in .gitignore.
+HF_TOKEN=
 HF_HOME=/hf
 HF_DATASETS_CACHE=/hf/datasets
-HF_DATASETS_OFFLINE=1
-TRANSFORMERS_OFFLINE=1
+HF_DATASETS_OFFLINE=0
+TRANSFORMERS_OFFLINE=0
 
-WANDB_API_KEY=<API_KEY>
+WANDB_API_KEY=
 WANDB_PROJECT=whisper4sg
 WANDB_ENTITY=i4ds
 WANDB_MODE=offline
