--- a/configs/sada22_full.yaml
+++ b/configs/sada22_full.yaml
@@ -31,13 +31,14 @@ dataset:
 
 lr_scheduler:
   type: linear
-  warmup_steps: 0.1
+  warmup_steps: 0.15  # 15% warmup for stability when fine-tuning
 
 optimizer:
   type: adamw
   8bit: false
   params:
-    lr: 2.0e-4
+    # Use 5e-5 for full fine-tuning; 2e-4 often causes collapse (WER → 100%, identical NLL)
+    lr: 5.0e-5
     weight_decay: 0.1
     betas: [0.9, 0.98]
     eps: 1.0e-6
